--- a/AudioVideoAndMedia/index.html
+++ b/AudioVideoAndMedia/index.html
@@ -11,25 +11,25 @@
     <h1>WEBSITE FOR IMAGE, VIDEO, AND MEDIA</h1>
 
     <h2>Images</h2>
-
+    <div>
     <img src="image1.png" width="500" alt="Beach">
     <img src="image2.png" width="500" alt="image">
     <img src="image3.jpg" width="500" alt="Aeroplane">
     <img src="image4.jpg" width="500" alt="Butterfly">
-
+    </div>
     <h2>Audio</h2>
-
+    <div>
     <audio src="audio1.mp3" controls></audio>
     <audio src="audio2.mp3" controls></audio>
-
+    </div>
     <h2>Video</h2>
-
-    <video src="video.mp4" width="500" controls></video>
-    <video src="video1.mp4" width="500" controls></video>
-    <video src="video2.mp4" width="500" controls></video>
-
+    <div>
+    <video width="250" src="video.mp4" width="500" controls></video>
+    <video width="250" src="video1.mp4" width="500" controls></video>
+    <video width="250" src="video2.mp4" width="500" controls></video>
+        </div>
     <h2>YouTube Video</h2>
-
+        <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fhoDRB53DwY?si=OctMCON0DryE9XEg"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -43,7 +43,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dcwHfar4y04?si=Zv-H1eCSt1-AtAOz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            </div>
 </body>
 
 </html>
