--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 //THE MAKING OF FORM
 
 
-<!-- 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -63,7 +63,7 @@
     </form>
 </body>
 
-</html> -->
+</html>
 
 
 //INLINE AND BLOCK Elements
