--- a/Exercise3-Card/index.html
+++ b/Exercise3-Card/index.html
@@ -109,7 +109,7 @@
         <div class="capsules">
             <span>Nature</span>
             <span>Sunset</span>
-            <span>Mo</span>
+            <span>Mountain</span>
         </div>
 
         <div class="content">
