--- a/CSS_Transition/index.html
+++ b/CSS_Transition/index.html
@@ -15,14 +15,16 @@
             background-color: coral;
             width: 5vw;
             height: 4vh;
-            transition-property: transform;
+            /* transition-property: transform;
             transition-duration: 3s;
             transition-timing-function: ease-in-out ;
-            transition-delay: 1s ;
+            transition-delay: 1s ; */
+            transition: all 3s ease-in-out 1s;
         }
 
         .translate{
-            transform: translateX(10vw) translateY(10vh);
+            transform: translateX(10vw) translateY(10vh) scale(2);
+            background-color: blue;
         }
     </style>
 </head>
